--- a/part4/front-end/index.html
+++ b/part4/front-end/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <header>
-      <img src="images/logo.png" alt="HBNB Logo" id="Logo" />
+      <a href="index.html">
+    	<img src="images/logo.png" alt="HBNB Logo" id="Logo" />
+      </a>
       <div class="auth-buttons">
       	<a href="login.html" class="btn-login" id="login-btn">Login</a>
       	<a href="logout.html" class="btn-logout" id="logout-btn" style="display:none;">Logout</a>
@@ -32,13 +34,13 @@
         <section id="places-list">
 	   <article class="place-card">
 		   <h2>Maison de charme</h2>
-		   <p>Prix : 100€ / nuit</p>
-		   <button class="details-button">Voir détails</button>
+		   <p>Prix : 100$ / night</p>
+		   <a href="place.html" class="details-button">View Details</a>
 	   </article>
 	   <article class="place-card">
 		   <h2>Appartement moderne</h2>
-		   <p>Prix : 80€ / nuit</p>
-		   <button class="details-button">Voir détails</button>
+		   <p>Prix : 80$ / night</p>
+		   <a href="place.html" class="details-button">View Details</a>
             <!-- List of places will be populated dynamically -->
         </section>
     </main>
