--- a/part4/front-end/place.html
+++ b/part4/front-end/place.html
@@ -9,9 +9,13 @@
 </head>
 <body>
     <header>
-	<img src="../static/images/logo.png" alt="HBNB Logo" id="logo" />
-    	<a href="login.html" class="btn-login" id="login-btn">Login</a>
-    	<a href="logout.html" class="btn-logout" id="logout-btn" style="display:none;">Logout</a>
+       <a href="index.html">
+        <img src="images/logo.png" alt="HBNB Logo" id="Logo" />
+      </a>
+      <div class="auth-buttons">
+        <a href="login.html" class="btn-login" id="login-btn">Login</a>
+        <a href="logout.html" class="btn-logout" id="logout-btn" style="display:none;">Logout</a>
+      </div>	
     </header>
 
     	<nav>
