--- a/part4/front-end/add_review.html
+++ b/part4/front-end/add_review.html
@@ -14,7 +14,7 @@
       </a>
       <div class="auth-buttons">
         <a href="login.html" class="btn-login" id="login-btn">Login</a>
-        <a href="logout.html" class="btn-logout" id="logout-btn" style="display:none;">Logout</a>
+        <button type="button" class="btn-logout" id="logout-btn" style="display:none;">Logout</button>
       </div>	
      </header>
      	 <nav>
