--- a/part4/front-end/index.html
+++ b/part4/front-end/index.html
@@ -14,7 +14,7 @@
       </a>
       <div class="auth-buttons">
       	<a href="login.html" class="btn-login" id="login-btn">Login</a>
-	<button class="btn-logout" id="logout-btn" style="display:none;">Logout</button>
+	<a href="logout.html" class="btn-login" id="logout-btn">Logout</a>
       </div>
     </header>
 
@@ -32,20 +32,13 @@
             </select>
         </section>
         <section id="places-list">
-	   <article class="place-card">
-		   <h2>Maison de charme</h2>
-		   <p>Prix : 100$ / night</p>
-		   <a href="place.html" class="details-button">View Details</a>
-	   </article>
-	   <article class="place-card">
-		   <h2>Appartement moderne</h2>
-		   <p>Prix : 80$ / night</p>
-		   <a href="place.html" class="details-button">View Details</a>
             <!-- List of places will be populated dynamically -->
         </section>
     </main>
-
-    <div id="footer-container"></div>
+    
+    <footer>
+  	<p>&copy; 2025 HBNB. All rights reserved.</p>
+    </footer>
 
     <script src="scripts.js"></script>
 </body>
