--- a/part4/front-end/login.html
+++ b/part4/front-end/login.html
@@ -14,7 +14,7 @@
       </a>
       <div class="auth-buttons">
         <a href="login.html" class="btn-login" id="login-btn">Login</a>
-        <button type="button" class="btn-logout" id="logout-btn" style="display:none;">Logout</button>
+	<a href="logout.html" class="btn-logout" id="logout-btn">Login</a>
       </div>	
     </header>
 
@@ -26,6 +26,7 @@
 	</nav>
 
     <main>
+      <div class="login-card">    
         <form id="login-form">
             <h2>Login</h2>
             <label for="email">Email:</label>
@@ -38,7 +39,9 @@
         </form>
     </main>
 
-    <div id="footer-container"></div>
+    <footer>
+  	<p>&copy; 2025 HBNB. All rights reserved.</p>
+    </footer>
 
     <script src="scripts.js"></script>
 </body>
