--- a/part4/front-end/place.html
+++ b/part4/front-end/place.html
@@ -14,7 +14,7 @@
       </a>
       <div class="auth-buttons">
         <a href="login.html" class="btn-login" id="login-btn">Login</a>
-        <button type="button" class="btn-logout" id="logout-btn" style="display:none;">Logout</button>
+	<a href="logout.html" class="btn-logout" id="logout-btn">Logout</a>
       </div>	
     </header>
 
@@ -45,7 +45,9 @@
         </section>
     </main>
 
-    <div id="footer-container"></div>
+    <footer>
+  	<p>&copy; 2025 HBNB. All rights reserved.</p>
+    </footer>
 
     <script src="scripts.js"></script>
 </body>
