--- a/part4/front-end/add_review.html
+++ b/part4/front-end/add_review.html
@@ -46,6 +46,8 @@
   	<p>&copy; 2025 HBNB. All rights reserved.</p>
     </footer>
 
+    <div id="reviews-container"></div>
+
     <script src="scripts.js"></script>
 </body>
 </html>
