--- a/part4/front-end/place.html
+++ b/part4/front-end/place.html
@@ -48,6 +48,9 @@
   	<p>&copy; 2025 HBNB. All rights reserved.</p>
     </footer>
     
+    <div class="page-container">
+    	<div id="place-details"></div>
+    </div>
 
     <script src="scripts.js"></script>
 </body>
