--- a/part4/front-end/place.html
+++ b/part4/front-end/place.html
@@ -33,6 +33,12 @@
         <section id="reviews">
             <!-- Reviews will be populated dynamically -->
         </section>
+    
+     <div class="page-container">
+        <div id="place-details"></div>
+        <div id="reviews-container"></div>
+    </div>
+
         <section id="add-review">
             <h2>Add a Review</h2>
             <form id="review-form">
@@ -48,10 +54,6 @@
   	<p>&copy; 2025 HBNB. All rights reserved.</p>
     </footer>
     
-    <div class="page-container">
-    	<div id="place-details"></div>
-    </div>
-
     <script src="scripts.js"></script>
 </body>
 </html>
