--- a/part4/front-end/index.html
+++ b/part4/front-end/index.html
@@ -26,6 +26,7 @@
 
     <main>
         <section id="filter">
+	   <h2>Available Places</h2>	
             <label for="price-filter">Max Price:</label>
             <select id="price-filter">
                 <!-- Options will be populated dynamically -->
